fixed alignment of reesume button

--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -68,6 +68,20 @@
     border-radius: 4px;
     cursor: pointer;
   }
+  
+  .resume-button {
+    color: #287352;
+    background: 0 0;
+    font: 11px;
+    letter-spacing: 3px;
+    text-decoration: none;
+    padding: 8px 10px;
+    border: 1px solid #287352;
+    float: right;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 10px;
+  }
 }
 
 // .map-wrap {
@@ -111,19 +125,6 @@
         color: #287352;
       }
     }
-  }
-
-  .resume-button {
-    color: #287352;
-    background: 0 0;
-    font: 11px;
-    letter-spacing: 3px;
-    text-decoration: none;
-    padding: 8px 10px;
-    border: 1px solid #287352;
-    float: right;
-    border-radius: 4px;
-    cursor: pointer;
   }
 
   @media screen and (max-width: 1200px) {
